Add Management and AccessDenied labels

--- a/src/main/resources/messages_es_ES.properties
+++ b/src/main/resources/messages_es_ES.properties
@@ -39,10 +39,15 @@ label.form.loginSignUpCaptcha=Registrese Captcha v3
 label.form.rememberMe=Recu&aacute;rdame
 label.pages.logout=Salir
 label.pages.admin=Administrador
+label.pages.manager=Manager
+label.pages.manager.message = Welcome to Management Page
+label.pages.manager.title = Manager Page
 label.pages.home.title=Inicio
 label.pages.home.message=Bienveni@ a Casa
 label.pages.admin.message=Bienvenid@ Admin
 label.pages.user.message=Bienvenid@ Usuari@
+label.pages.accessDenied.title = Acceso denegado
+label.pages.accessDenied.message = Acceso denegado!
 label.successRegister.title=Registro Exitoso
 label.badUser.title=Enlace Invalido
 ValidEmail.user.email=Cuenta correo invlida!
