--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -40,12 +40,17 @@ label.form.loginSignUpReCaptchaV3=Sign up with reCAPTCHA v3
 label.form.rememberMe=Remember Me
 label.pages.logout=Logout
 label.pages.admin=Administrator
+label.pages.manager=Manager
+label.pages.manager.title = Manager Page
+label.pages.manager.message = Welcome to Management Page
 label.pages.home.title=Home
 label.pages.home.message=Welcome Home
 label.pages.users.message=View Logged In Users
 label.pages.users.sessionregistry.message=View Logged In Users from SessionRegistry
 label.pages.admin.message=Welcome Admin
 label.pages.user.message=Welcome User
+label.pages.accessDenied.title = Access denied
+label.pages.accessDenied.message = Access denied!
 label.successRegister.title=Registration Success
 label.badUser.title=Invalid Link
 ValidEmail.user.email=Invalid email address!
